--- a/lsb/CMakeLists.txt
+++ b/lsb/CMakeLists.txt
@@ -26,7 +26,6 @@ endif()
 
 set(SOURCE_FILES "")
 list(APPEND SOURCE_FILES
-    ${CMAKE_CURRENT_LIST_DIR}/src/main_lib.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/gif_lsb_enc.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/MimeTypes.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/mark.cpp
@@ -47,12 +46,37 @@ include(${LIB_DIR}/gif_enc/CMakeLists.txt)
 include(${LIB_DIR}/image_sequence/CMakeLists.txt)
 include(${LIB_DIR}/file_io/CMakeLists.txt)
 
-add_library(giflsb SHARED ${SOURCE_FILES})
 
-target_include_directories(giflsb PRIVATE ${INCLUDE_DIRS})
+if(${TARGET_LIB})
+    add_library(giflsb SHARED ${SOURCE_FILES} ${CMAKE_CURRENT_LIST_DIR}/src/main_lib.cpp)
 
-target_compile_options(giflsb PRIVATE ${GLOBAL_COMPILE_OPTIONS})
+    target_include_directories(giflsb PRIVATE ${INCLUDE_DIRS})
 
-target_link_options(giflsb PRIVATE ${GLOBAL_LINK_OPTIONS})
+    target_compile_options(giflsb PRIVATE ${GLOBAL_COMPILE_OPTIONS})
 
-target_compile_definitions(giflsb PRIVATE ${GLOBAL_COMPILE_DEFINITIONS} ${COMPILE_DEFINITIONS})
+    target_link_options(giflsb PRIVATE ${GLOBAL_LINK_OPTIONS})
+
+    target_compile_definitions(giflsb PRIVATE ${GLOBAL_COMPILE_DEFINITIONS} ${COMPILE_DEFINITIONS})
+endif()
+
+if(${TARGET_EXE})
+    add_executable(GIFLsb-enc ${SOURCE_FILES}
+        ${CMAKE_CURRENT_LIST_DIR}/src/main_enc.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/options_enc.cpp)
+    add_executable(GIFLsb-dec ${SOURCE_FILES}
+        ${CMAKE_CURRENT_LIST_DIR}/src/main_dec.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/options_dec.cpp)
+
+    target_include_directories(GIFLsb-enc PRIVATE ${INCLUDE_DIRS})
+    target_include_directories(GIFLsb-dec PRIVATE ${INCLUDE_DIRS})
+
+    target_compile_options(GIFLsb-enc PRIVATE ${GLOBAL_COMPILE_OPTIONS})
+    target_compile_options(GIFLsb-dec PRIVATE ${GLOBAL_COMPILE_OPTIONS})
+
+    target_link_options(GIFLsb-enc PRIVATE ${GLOBAL_LINK_OPTIONS})
+    target_link_options(GIFLsb-dec PRIVATE ${GLOBAL_LINK_OPTIONS})
+
+    target_compile_definitions(GIFLsb-enc PRIVATE ${GLOBAL_COMPILE_DEFINITIONS} ${COMPILE_DEFINITIONS})
+    target_compile_definitions(GIFLsb-dec PRIVATE ${GLOBAL_COMPILE_DEFINITIONS} ${COMPILE_DEFINITIONS})
+endif()
+
